Bug 120593 - Right-column tabs vanish when saved as DOCX
Summary: Right-column tabs vanish when saved as DOCX
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.1.6.2 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:6.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-14 17:48 UTC by Jim Parsons
Modified: 2023-07-13 13:13 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Parsons 2018-10-14 17:48:27 UTC
Description:
FORMATTING?  In Writer, create a document in landscape orientation with two columns.  Save it as DOCX.  Put some flush left paragraphs into the right column by either adding a column break or overflowing text from the left column.  Select a right-column paragraph, and replace all tabs with a single right tab.  Add text-tab-text.  The text following the tab is inaccessible beyond the right margin.  If the document had been saved as ODT, the right-column right tab would work as expected.

Steps to Reproduce:
1.  Create a document in landscape orientation with two columns.
2.  Save it as DOCX.
3.  Put some flush-left paragraphs into the right column.
4.  Select a right-column paragraph, and replace all tabs with a single right tab.
5.   Add text-tab-text.  (Some text before and after a tab.)

Actual Results:
The text following the tab is inaccessible beyond the right margin.

Expected Results:
Text before the tab would be flush left.  Text after the tab would be flush right.


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
If the document had been saved as ODT, the right-column right tab would work as expected.

UserProfile:  I can't figure out how to reset my UserProfile because I can't locate a user file in anything like the path described in the instructions, so I'm leaving this unchecked on the form.  However, I'm seeing the same Writer problem on three different machines.

OpenGL info:
OpenGL vendor string: Intel Open Source Technology Center
OpenGL renderer string: Mesa DRI Intel(R) Sandybridge Mobile 
OpenGL core profile version string: 3.3 (Core Profile) Mesa 17.0.7
OpenGL core profile shading language version string: 3.30
OpenGL core profile context flags: (none)
OpenGL core profile profile mask: core profile
OpenGL core profile extensions:
OpenGL version string: 3.0 Mesa 17.0.7
OpenGL shading language version string: 1.30
OpenGL context flags: (none)
OpenGL extensions:
OpenGL ES profile version string: OpenGL ES 3.0 Mesa 17.0.7
OpenGL ES profile shading language version string: OpenGL ES GLSL ES 3.00
OpenGL ES profile extensions:
Comment 1 Mike Kaganski 2018-10-14 18:32:47 UTC
Confirmed this:

putting a tab using mouse-click on the horizontal ruler at the right margin or to its right doesn't take indent into account. It means, when cursor is in the right column, or in right table cell, etc., clicking inside the column/cell ruler area puts tab position properly (say, 8.4 cm), but clicking to the right margin puts tab stop position relative to the left column (and it jumps to 17.0 cm or something similar). Combined with compatibility TAB OVER MARGIN feature, this makes right-aligned tab stop placed far beyond the column to make the text invisible.

This is similar to bug 95846, except for the "outside of the column margin" part. Tested with Version: 6.2.0.0.alpha0+ (x64)
Build ID: 7e85ee1e5fdf0c122f450155f49d9696aef17de0
CPU threads: 12; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: ru-RU (ru_RU); Calc: CL
Comment 2 Mike Kaganski 2018-10-14 20:56:09 UTC
Actually, the problem is only specific to the case when new tab is released at the place identical to current right indent.

https://gerrit.libreoffice.org/61768
Comment 3 Commit Notification 2018-10-15 04:56:50 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2da25cb43f4af8d094b01de1073eee2e2023c029

tdf#120593: properly handle tab pos identical to right indent

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2018-11-15 12:36:09 UTC
A polite ping to Mike Kaganski:
Is this bug fixed? if so, could you please close it as RESOLVED FIXED ? Otherwise, Could you please explain what's missing?
Thanks
Comment 5 Mike Kaganski 2018-11-15 13:45:43 UTC
(In reply to Xisco Faulí from comment #4)

Well - I could only partially confirm the issue from comment 0. I hoped to hear from OP if the issue has been fixed. Nevertheless, it's worth closing it; in case of a need, it might be reopened, or a new issue filed.