tdf#120593: properly handle tab pos identical to right indent

... otherwise it's counted without taking into account current column,
as well as TabsRelativeToIndent mode.

Change-Id: I7442f63d9d5c51c5a4d82094b49b8028f2b42b41